--- a/keyflow/typetest/templates/typetest.html
+++ b/keyflow/typetest/templates/typetest.html
@@ -81,6 +81,9 @@
 </body>
     <!-- The Phaser game will render here -->
 {% block scripts %}
+<script>
+    var csrfToken = "{{ csrf_token }}"
+</script>
 <!-- Include Phaser.js -->
 <script src="{% static 'Phaser/phaser.min.js' %}"></script>
 <!-- Include your game logic script -->
